2004-02-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/*.kahua: changed tags from symbol to function.
	
2004-02-14  Nobuo Yamashita  <nobsun@sampou.org>
	
	* src/kahua/elem.scm: newly added. It provides html tags implemented
	as functions.
	* src/kahua.scm: added kahua.elem.
	
2004-02-14  Yusei Tahara  <tahara@timedia.co.jp>

	* emacs/kahua-shell.el.in: added remote emacs interface. can use 'run-kahua-shell' like 'run-scheme'.
	* emacs/Makefile.in: added 'kahua-shell.el' make target.
	* src/kahua-shell.in (login-processor): if stdin is not a terminal,
	password prompt is echoed.

2004-02-11  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/lazy-nqueen/lazy-nqueen.kahua : improved laziness.
	Function applications are delayed instead args of cons.

	* test/nqueen.scm : modified a little.
	
2004-02-10  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/lazy-nqueen/lazy-nqueen.kahua : added.

	* test/nqueen.scm : added test part for examples/lazy-nqueen.
	
2004-02-08  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm : records persistent class information
	as <kahua-persistent-metainfo> persistent object.
	* test/persistence.scm : updated accordingly.

	* src/kahua/test/worker.scm (call-worker/gsid->sxml): added.
	(make-match&pick) : dropped the support of extra sxpath spec.
	it is easier to apply sxpath in call-worker/gsid->sxml instead
	of here; it will produce comprehensive error log.
	Also decode uri encoding.

	* test/nqueen.scm : added to test examples/nqueen.

2004-02-06  Shiro Kawai  <shiro@acm.org>

	* src/kahua/partcont.scm, test/partcont.scm :
	(reset/pc, call/pc, let/pc) : implemented partial continuation
	according to Gasbichler&Sperber ICFP02 paper.
	* src/kahua/kahua.scm : extends kahua.partcont
	* src/kahua/server.scm : wrap handler invocation by reset/pc,
	so that the partial continuation captured in the application-server
	returns correctly.

	* examples/nqueen/nqueen.kahua : added an example that uses